<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 nsnikhil
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/matchParent"
    android:padding="@dimen/eight">

    <EditText
        android:id="@+id/rollDiceQuantity"
        style="@style/stretchedHorizontally"
        android:hint="@string/rollDiceQuantityHint"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rollDiceList"
        style="@style/stretchedHorizontally"
        android:clipToPadding="false"
        android:paddingBottom="116dp"
        app:layout_constraintTop_toBottomOf="@id/rollDiceQuantity"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/rollDice"
        style="@style/button"
        android:text="@string/rollDice"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>