<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 nsnikhil
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/matchParent"
    android:orientation="vertical">

    <include
        android:id="@+id/mainToolbar"
        layout="@layout/toolbar" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/mainTabLayout"
        style="@style/toolbar"
        app:layout_constraintTop_toBottomOf="@id/mainToolbar" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/mainViewPager"
        style="@style/stretchedHorizontally" />

</LinearLayout>
